--- a/source/sass/base/_animations.scss
+++ b/source/sass/base/_animations.scss
@@ -5,18 +5,22 @@
   }
   25% {
     transform: scale(0);
-    opacity: 0.1;
+    opacity: 0.0;
   }
   50% {
     transform: scale(0.1);
-    opacity: 0.3;
+    opacity: 0.0;
   }
   75% {
-    transform: scale(0.5);
-    opacity: 0.5;
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  90% {
+    transform: scale(1);
+    opacity: 1;
   }
   100% {
-    transform: scale(1);
-    opacity: 0.0;
+    transform: scale(1.1);
+    opacity: 0.9;
   }
 }
