--- a/source/sass/layout/_grid.scss
+++ b/source/sass/layout/_grid.scss
@@ -102,6 +102,7 @@
 .map__top {
   padding: 1rem 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -166,6 +167,12 @@
     &--first {
       margin-top: 0;
     }
+  }
+
+  .map__top {
+    padding: 1rem 0;
+    flex-direction: row;
+    align-items: center;
   }
 
 
