--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -36,8 +36,10 @@
 @import "components/filter";
 @import "components/article";
 @import "components/map";
+@import "components/map_sidebar";
 @import "components/person";
 @import "components/form";
+
 
 
 //---------PAGES----------
